--- a/personal-website/css/media.css
+++ b/personal-website/css/media.css
@@ -302,3 +302,26 @@
   .bottle-container .bottle {
     margin: 2.5em; } }
 /* Large devices (large desktops, 1200px and up) */
+@media (min-width: 1200px) {
+  #skills .container {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -webkit-transform: translate(-50%, -50%);
+    -moz-transform: translate(-50%, -50%);
+    -o-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%); }
+
+  #deisgn .container {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -webkit-transform: translate(-50%, -50%);
+    -moz-transform: translate(-50%, -50%);
+    -o-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%); }
+
+  ul.round-thumbs {
+    height: 95vh; } }
