--- a/pw-04/css/style.css
+++ b/pw-04/css/style.css
@@ -9,6 +9,7 @@
 */
 /* Font Google - strong reaload time */
 @import url(http://fonts.googleapis.com/css?family=Lato:400,300,100,700,900&subset=latin,latin-ext);
+@import url(https://fonts.googleapis.com/css?family=Roboto:100,300,400);
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
@@ -66,7 +67,7 @@ h1 {
   line-height: 1.2; }
 
 p {
-  font-size: 14px;
+  font-family: 'Roboto', sans-serif;
   font-weight: 300;
   letter-spacing: 1px;
   margin-top: 1em; }
@@ -128,6 +129,7 @@ h1 span {
     letter-spacing: 10px;
     margin-bottom: 1em; }
   .start-page .content .text p {
+    font-family: 'Playfair Display', serif;
     letter-spacing: 9px;
     font-size: 1.1em; }
 
@@ -318,11 +320,6 @@ h1 span {
   color: #6dcff6; }
 
 /* About us */
-.tilt-mountain img {
-  position: absolute;
-  width: 100%;
-  bottom: 0; }
-
 .about-us {
   position: relative;
   width: 100%;
@@ -358,7 +355,7 @@ h1 span {
   width: 100%;
   line-height: 26px;
   letter-spacing: 0;
-  font-size: 14px;
+  font-size: 15px;
   font-weight: 300;
   text-align: center; }
 
@@ -377,83 +374,19 @@ h1 span {
   font-size: 14px;
   width: 250px;
   margin: 30px auto;
-  color: #a4a4a4;
   line-height: 26px;
   letter-spacing: 0;
   position: relative;
-  font-weight: 300; }
-
-.about-us .column {
-  background: rgba(255, 245, 104, 0.6);
-  padding-top: 25px; }
-.about-us p {
+  font-weight: 300;
   color: #545863; }
 
-.about-us .column-one {
-  margin-top: 40px;
-  width: 300px;
-  float: left;
-  margin-bottom: 70px;
-  height: 350px; }
-
-.about-us .column-one .circle-one {
-  height: 100px;
-  position: relative;
-  margin: 0 auto;
-  border: 2px solid #f0f0f0;
-  background: url(../img/icons/responsive.png) no-repeat center center;
-  border-radius: 100px;
-  width: 100px;
-  cursor: pointer;
-  -webkit-transition: all 0.2s ease-in;
-  transition: all 0.2s ease-in; }
-
-.about-us .column-one .circle-one:hover {
-  border: 2px solid #6dcff6; }
-
-.about-us .column-two {
-  margin-top: 40px;
-  width: 300px;
-  float: left;
-  margin-bottom: 70px;
-  height: 350px; }
-
-.about-us .column-two .circle-two {
-  height: 100px;
-  position: relative;
-  margin: 0 auto;
-  border: 2px solid #f0f0f0;
-  background: url(../img/icons/minimalist.png) white no-repeat center center;
-  border-radius: 100px;
-  width: 100px;
-  cursor: pointer;
-  -webkit-transition: all 0.2s ease-in;
-  transition: all 0.2s ease-in; }
-
-.about-us .column-two .circle-two:hover {
-  border: 2px solid #6dcff6; }
-
-.about-us .column-three {
-  margin-top: 40px;
-  width: 300px;
-  float: left;
-  margin-bottom: 70px;
-  height: 350px; }
-
-.about-us .column-three .circle-three {
-  height: 100px;
-  position: relative;
-  margin: 0 auto;
-  border: 2px solid #f0f0f0;
-  background: url(../img/icons/free.png) white no-repeat center center;
-  border-radius: 100px;
-  width: 100px;
-  cursor: pointer;
-  -webkit-transition: all 0.2s ease-in;
-  transition: all 0.2s ease-in; }
-
-.about-us .column-three .circle-three:hover {
-  border: 2px solid #6dcff6; }
+.about-us .mountain-group {
+  display: block;
+  margin: 72px auto 120px auto; }
+  .about-us .mountain-group svg {
+    width: 100%; }
+    .about-us .mountain-group svg .m-triangle polygon {
+      mix-blend-mode: multiply; }
 
 /* Portfolio */
 .portfolio {
@@ -525,50 +458,61 @@ h1 span {
 .grid img {
   width: 285px;
   float: left;
-  position: relative; }
+  position: relative;
+  opacity: 0.6; }
+
+.grid .text-overlay {
+  position: absolute;
+  width: 285px;
+  height: 100%;
+  background: rgba(109, 207, 246, 0.8);
+  z-index: 2;
+  opacity: 0;
+  -webkit-transition: all 0.6s ease-in;
+  transition: all 0.6s ease-in; }
+
+.grid li:nth-child(even) .text-overlay {
+  background: rgba(255, 245, 104, 0.8); }
+.grid li:nth-child(even) .text p {
+  color: #545863; }
+.grid li:nth-child(even) .text hr {
+  color: #545863;
+  background-color: #545863; }
+
+.grid .text-overlay:hover {
+  opacity: 1; }
 
 .grid .text {
   position: absolute;
-  width: 285px;
-  height: 100%;
-  background: #ada074;
-  z-index: 2;
-  opacity: 0;
-  -webkit-transition: all 0.6s ease-in;
-  transition: all 0.6s ease-in; }
-
-.grid .text:hover {
-  opacity: 1; }
-
-.grid .no-text {
-  position: absolute;
-  width: 285px;
-  height: 100%;
-  background: rgba(173, 160, 116, 0.5);
-  z-index: 2;
-  opacity: 0;
-  -webkit-transition: all 0.6s ease-in;
-  transition: all 0.6s ease-in; }
-
-.grid .no-text:hover {
-  opacity: 1; }
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
+  -moz-transform: translate(-50%, -50%);
+  -o-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%); }
 
 .grid p {
+  font-family: 'Playfair Display', serif;
   font-size: 18px;
   text-align: center;
-  line-height: 26px;
-  margin-top: 40px;
-  font-weight: bold;
+  line-height: 12px;
   letter-spacing: 1px;
   color: #FFF; }
+
+.grid .text hr {
+  color: #fff;
+  background-color: #fff;
+  height: 1px;
+  width: 120px;
+  border: 0; }
 
 .grid p.description {
   font-size: 12px;
   width: 300px;
-  margin-top: 20px;
+  margin-top: 8px;
   text-align: center;
   line-height: 20px;
-  font-weight: 400;
   color: #FFF;
   position: relative; }
 
