--- a/pw-04/css/style.scss
+++ b/pw-04/css/style.scss
@@ -9,6 +9,7 @@
 
 /* Font Google - strong reaload time */
 @import url(http://fonts.googleapis.com/css?family=Lato:400,300,100,700,900&subset=latin,latin-ext);
+@import url(https://fonts.googleapis.com/css?family=Roboto:100,300,400);
 
 @charset "UTF-8";
 /* ==========================================================================
@@ -69,7 +70,7 @@ h1{
 }
 
 p{
-  font-size:14px;
+  @include roboto;
   font-weight:300;
   letter-spacing:1px;
   margin-top:1em;
@@ -140,6 +141,7 @@ h1 span{
     margin-bottom: 1em;
   }
   p{
+    @include serif-font;
     letter-spacing: 9px;
     font-size: 1.1em;
   }
@@ -261,7 +263,6 @@ h1 span{
   display:none;
 }
 
-
 .menu-click li {
   position:relative;
   width:100%;
@@ -348,15 +349,6 @@ h1 span{
 
 
 /* About us */
-.tilt-mountain{
-  img{
-    position: absolute;
-    width: 100%;
-    //max-height: 600px;
-    bottom: 0;
-  }
-}
-
 .about-us{
   position:relative;
   width:100%;
@@ -399,7 +391,7 @@ h1 span{
   width: 100%;
   line-height:26px;
   letter-spacing:0;
-  font-size:14px;
+  font-size:15px;
   font-weight:300;
   text-align:center;
 }
@@ -421,113 +413,29 @@ h1 span{
   font-size:14px;
   width:250px;
   margin:30px auto;
-  color:#a4a4a4;
   line-height:26px;
   letter-spacing:0;
   position:relative;
   font-weight:300;
+  color: $dark-grey;
 }
 
 .about-us{
-  .column{
-    background: rgba($yellow, .6);
-    padding-top: 25px;
-  }  
-  p{
-    color: $dark-grey;
-  }
-}
-
-.about-us .column-one{
-  margin-top:40px;
-  width:300px;
-  float:left;
-  margin-bottom:70px;
-  height:350px;
-}
-
-.about-us .column-one .circle-one{
-  height: 100px;
-  position:relative;
-  margin:0 auto;
-  border:2px solid #f0f0f0;
-  background: url(../img/icons/responsive.png) no-repeat center center;
-  -moz-border-radius:100px;
-  -webkit-border-radius:100px;
-  border-radius: 100px;
-  width: 100px;
-  cursor:pointer;
-    -webkit-transition: all 0.2s ease-in;
-	-moz-transition: all 0.2s ease-in;
-	-ms-transition: all 0.2s ease-in;
-	-o-transition: all 0.2s ease-in;
-	transition: all 0.2s ease-in;
-}
-
-.about-us .column-one .circle-one:hover{
-  border:2px solid $blue;
-}
-
-.about-us .column-two{
-  margin-top:40px;
-  width:300px;
-  float:left;
-  margin-bottom:70px;
-  height:350px;
-}
-
-.about-us .column-two .circle-two{
-  height: 100px;
-  position:relative;
-  margin:0 auto;
-  border:2px solid #f0f0f0;
-  background: url(../img/icons/minimalist.png) white no-repeat center center;
-  -moz-border-radius:100px;
-  -webkit-border-radius:100px;
-  border-radius: 100px;
-  width: 100px;
-    cursor:pointer;
-    -webkit-transition: all 0.2s ease-in;
-	-moz-transition: all 0.2s ease-in;
-	-ms-transition: all 0.2s ease-in;
-	-o-transition: all 0.2s ease-in;
-	transition: all 0.2s ease-in;
-}
-
-.about-us .column-two .circle-two:hover{
-  border:2px solid $blue;
+   .mountain-group{
+     display: block;
+     margin: 72px auto 120px auto;
+     svg{
+        width: 100%;
+        .m-triangle{
+          polygon{
+            mix-blend-mode: multiply;
+          }
+        }
+      }
+   }
 }
 
 
-.about-us .column-three{ 
-  margin-top:40px;
-  width:300px;
-  float:left;
-  margin-bottom:70px;
-  height:350px;
-}
-
-.about-us .column-three .circle-three{ 
-  height: 100px;
-  position:relative;
-  margin:0 auto;
-  border:2px solid #f0f0f0;
-  background: url(../img/icons/free.png) white no-repeat center center;
-  -moz-border-radius:100px;
-  -webkit-border-radius:100px;
-  border-radius: 100px;
-  width: 100px;
-  cursor:pointer;
-  -webkit-transition: all 0.2s ease-in;
-	-moz-transition: all 0.2s ease-in;
-	-ms-transition: all 0.2s ease-in;
-	-o-transition: all 0.2s ease-in;
-	transition: all 0.2s ease-in;
-}
-
-.about-us .column-three .circle-three:hover{ 
-  border:2px solid $blue;
-}
 
 
 
@@ -621,13 +529,14 @@ h1 span{
   width:285px;
   float: left;
   position: relative;
+  opacity: 0.6;
 }
 
-.grid .text {
+.grid .text-overlay {
   position: absolute;
   width: 285px;
   height:100%;
-  background: rgba(173,160,116,1);
+  background: rgba($blue, .8);
   z-index: 2;
   opacity:0;
     -webkit-transition: all 0.6s ease-in;
@@ -637,45 +546,51 @@ h1 span{
 	transition: all 0.6s ease-in;
 }
 
-.grid .text:hover {
+.grid li:nth-child(even){
+  .text-overlay{
+     background: rgba($yellow, .8);
+  }
+  .text{
+    p{color: $dark-grey;}
+    hr{
+       color: $dark-grey;
+       background-color: $dark-grey;
+    }
+  }
+}
+
+.grid .text-overlay:hover {
   opacity:1;
 }
 
-.grid .no-text {
-  position: absolute;
-  width: 285px;
-  height:100%;
-  background: rgba(173,160,116,0.5);
-  z-index: 2;
-  opacity:0;
-  -webkit-transition: all 0.6s ease-in;
-	-moz-transition: all 0.6s ease-in;
-	-ms-transition: all 0.6s ease-in;
-	-o-transition: all 0.6s ease-in;
-	transition: all 0.6s ease-in;
-}
 
-.grid .no-text:hover {
-  opacity:1;
+.grid .text{
+  @include centerEl;
 }
 
 .grid p {
+  @include serif-font;
   font-size: 18px;
   text-align:center;
-  line-height:26px;
-  margin-top:40px;
-  font-weight: bold;
+  line-height: 12px;
   letter-spacing:1px;
   color: #FFF;
+}
+
+.grid .text hr{
+    color: #fff;
+    background-color: #fff;
+    height: 1px;
+    width: 120px;
+    border: 0;
 }
 
 .grid p.description {
   font-size: 12px;
   width:300px;
-  margin-top:20px;
+  margin-top:8px;
   text-align:center;
   line-height:20px;
-  font-weight: 400;
   color: #FFF;
   position:relative;
 }
