--- a/pw-04/css/style-responsive.css
+++ b/pw-04/css/style-responsive.css
@@ -103,6 +103,9 @@
 
   .footer {
     position: relative; } }
+@media (max-width: 830px) {
+  .remodal img {
+    width: 85%; } }
 /* iPad (portrait) */
 @media (min-width: 580px) and (max-width: 767px) {
   .start-page .content .snow-mountain img {
