--- a/pw-04/css/remodal-default-theme.scss
+++ b/pw-04/css/remodal-default-theme.scss
@@ -71,9 +71,12 @@
 
 }
 
+.remodal img{
+  width: 68%;
+}
 
 .remodal p{
-  width: 70%;
+  width: 68%;
   display: block;
   margin: 1.618em auto;
   font-size: 1.2em;
