--- a/pw-04/css/style.scss
+++ b/pw-04/css/style.scss
@@ -1,4 +1,6 @@
-/* Thomsoon.com - OnePage CSS Responsive theme
+/* 
+This webpage was revised from the template by 
+Thomsoon.com - OnePage CSS Responsive theme
 -- version 1.0
 -- Copyright (c) 2014 Thomsoon.com
 -- licensed under the MIT
@@ -7,24 +9,15 @@
 --
 */
 
-/* Font Google - strong reaload time */
-@import url(http://fonts.googleapis.com/css?family=Lato:400,300,100,700,900&subset=latin,latin-ext);
-@import url(https://fonts.googleapis.com/css?family=Roboto:100,300,400);
 
 @charset "UTF-8";
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
 /* google fonts */
-@import url(https://fonts.googleapis.com/css?family=Roboto:100,300);
+@import url(https://fonts.googleapis.com/css?family=Roboto:100,300,400);
 @import url(https://fonts.googleapis.com/css?family=Playfair+Display);
 @import 'mixin.scss';
-
-/*
- * Theme Name: Onepage
- * Author: Thomsoon
- * Created: 14/11/2014
- */
 
 
 .preloader{
@@ -370,11 +363,11 @@ h1 span{
     i{
       padding-left: 3px;
       color: $dark-grey;
-      -webkit-transition: all 0.2s ease-in;
-  -moz-transition: all 0.2s ease-in;
-  -ms-transition: all 0.2s ease-in;
-  -o-transition: all 0.2s ease-in;
-  transition: all 0.2s ease-in;
+      -webkit-transition: all 0.5 ease-in;
+         -moz-transition: all 0.5 ease-in;
+          -ms-transition: all 0.5 ease-in;
+           -o-transition: all 0.5 ease-in;
+              transition: all 0.5 ease-in;
     }
 }
 
@@ -389,11 +382,6 @@ ul.dropdown-content {
     float: none;
     text-align: left;
     background: #FFF;
-     -webkit-transition: all 0.2s ease-in;
-    -moz-transition: all 0.2s ease-in;
-    -ms-transition: all 0.2s ease-in;
-    -o-transition: all 0.2s ease-in;
-    transition: all 0.2s ease-in;
     li{
       text-decoration: none;
       display: block;
@@ -454,6 +442,78 @@ ul.mobile-dropdown-content{
     -o-transition: all 0.2s ease-in;
     transition: all 0.2s ease-in;
 }
+
+.flipOutX{
+  backface-visibility: visible !important;
+      -webkit-animation-name: flipOutX;
+       -moz-animation-name: flipOutX;
+         -o-animation-name: flipOutX;
+            animation-name: flipOutX;
+    -webkit-animation-duration: 1s;
+       -moz-animation-duration: 1s;
+         -o-animation-duration: 1s;
+            animation-duration: 1s;
+}
+
+.flipInX{
+  backface-visibility: visible !important;
+     -webkit-animation-name: flipInX;
+       -moz-animation-name: flipInX;
+         -o-animation-name: flipInX;
+            animation-name: flipInX;
+    -webkit-animation-duration: 1s;
+       -moz-animation-duration: 1s;
+         -o-animation-duration: 1s;
+            animation-duration: 1s;
+}
+//animation for dropdown menu - by animate.css
+@-webkit-keyframes flipInX {
+  from {
+    transform: perspective(400px) rotate3d(1, 0, 0, 90deg);
+    animation-timing-function: ease-in;
+    opacity: 0;
+  }
+
+  40% {
+    transform: perspective(400px) rotate3d(1, 0, 0, -20deg);
+    animation-timing-function: ease-in;
+  }
+
+  60% {
+    transform: perspective(400px) rotate3d(1, 0, 0, 10deg);
+    opacity: 1;
+  }
+
+  80% {
+    transform: perspective(400px) rotate3d(1, 0, 0, -5deg);
+  }
+
+  to {
+    transform: perspective(400px);
+  }
+}
+
+@-webkit-keyframes flipOutX {
+  from {
+    transform: perspective(400px);
+  }
+
+  30% {
+    transform: perspective(400px) rotate3d(1, 0, 0, -20deg);
+    opacity: 1;
+  }
+
+  to {
+    transform: perspective(400px) rotate3d(1, 0, 0, 90deg);
+    opacity: 0;
+  }
+}
+
+
+.flipInX {
+  backface-visibility: visible !important;
+}
+
 
 
 
@@ -1063,4 +1123,123 @@ input.submit{
   line-height:36px;
   color:#a4a4a4;
 }
+
+//loader
+#loader-wrapper {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1000;
+    background: #FFF;
+}
+
+.loader {
+    font-size: 4em;
+    @include centerEl;
+    height: .5em;
+    width: 1em;
+    
+    z-index: 1001;
+}
+
+.loader:before,
+.loader:after {
+    content: "";
+    display: block;
+    border: 3px solid $yellow;
+    //background: #3d3e3f;
+    position: absolute;
+    height: .6em;
+    width: .6em;    
+}
+
+
+.loader:before {
+  border-color: $blue;
+    animation: load-before 2s ease-in-out infinite, zoom-before .66s ease-in-out infinite;
+    -webkit-animation: load-before 2s ease-in-out infinite, zoom-before .66s ease-in-out infinite;
+       -moz-animation: load-before 2s ease-in-out infinite, zoom-before .66s ease-in-out infinite;
+         -o-animation: load-before 2s ease-in-out infinite, zoom-before .66s ease-in-out infinite;
+            animation: load-before 2s ease-in-out infinite, zoom-before .66s ease-in-out infinite;
+  
+}
+
+.loader:after {
+    -webkit-animation: load-after 2s ease-in-out infinite, zoom-after .66s ease-in-out infinite;
+       -moz-animation: load-after 2s ease-in-out infinite, zoom-after .66s ease-in-out infinite;
+         -o-animation: load-after 2s ease-in-out infinite, zoom-after .66s ease-in-out infinite;
+            animation: load-after 2s ease-in-out infinite, zoom-after .66s ease-in-out infinite;
+   
+}
+
+@-webkit-keyframes load-before {
+    0% {
+        left: 0;
+        @include transform(scale(1.1));
+    }
+
+    50% {
+        left: 150%;
+        @include transform(scale(1.5, 1));  
+    }
+
+    100% {
+        left: 0;
+        @include transform(scale(1.1));
+    }
+}
+
+
+@-webkit-keyframes load-after {
+    0% {
+        left: 150%;
+        @include transform(scale(1.1));
+    }
+
+    50% {
+        left: 0;
+       @include transform(scale(1.5, 1));  
+    }
+
+    100% {
+        left: 150%;
+        @include transform(scale(1.1));
+    }
+
+}
+
+
+@-webkit-keyframes zoom-before {
+    0% { z-index: 0; }
+    50% { z-index: 1; }
+    100% { z-index: 0; }
+}
+
+@-webkit-keyframes zoom-after {
+    0% { z-index: 1; }
+    50% { z-index: 0; }
+    100% { z-index: 1; }
+}
+
+    
+    .loaded .loader:after, .loaded .loader:before{
+        left: 0;
+        opacity: 0;
+        @include transition(all .3s ease-out);     
+    }
+
+    .loaded #loader-wrapper {
+        visibility: hidden;
+    @include transform(translateY(-100%));  
+    @include transition(all 0.7s 0.5s ease-out);     
+    }
+    
+    /* JavaScript Turned Off */
+    .no-js #loader-wrapper {
+        display: none;
+    }
+
+
 
