--- a/pw-04/css/style.css
+++ b/pw-04/css/style.css
@@ -1,5 +1,7 @@
 @charset "UTF-8";
-/* Thomsoon.com - OnePage CSS Responsive theme
+/* 
+This webpage was revised from the template by 
+Thomsoon.com - OnePage CSS Responsive theme
 -- version 1.0
 -- Copyright (c) 2014 Thomsoon.com
 -- licensed under the MIT
@@ -7,14 +9,11 @@
 -- http://www.thomsoon.com/
 --
 */
-/* Font Google - strong reaload time */
-@import url(http://fonts.googleapis.com/css?family=Lato:400,300,100,700,900&subset=latin,latin-ext);
-@import url(https://fonts.googleapis.com/css?family=Roboto:100,300,400);
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
 /* google fonts */
-@import url(https://fonts.googleapis.com/css?family=Roboto:100,300);
+@import url(https://fonts.googleapis.com/css?family=Roboto:100,300,400);
 @import url(https://fonts.googleapis.com/css?family=Playfair+Display);
 /* general */
 /*#545863 */
@@ -26,11 +25,6 @@
   -ms-box-sizing: border-box;
   box-sizing: border-box; }
 
-/*
- * Theme Name: Onepage
- * Author: Thomsoon
- * Created: 14/11/2014
- */
 .preloader {
   position: fixed;
   width: 100%;
@@ -337,8 +331,8 @@ h1 span {
   .dropdown i {
     padding-left: 3px;
     color: #545863;
-    -webkit-transition: all 0.2s ease-in;
-    transition: all 0.2s ease-in; }
+    -webkit-transition: all 0.5 ease-in;
+    transition: all 0.5 ease-in; }
 
 ul.dropdown-content {
   display: none;
@@ -349,9 +343,7 @@ ul.dropdown-content {
   left: 0;
   float: none;
   text-align: left;
-  background: #FFF;
-  -webkit-transition: all 0.2s ease-in;
-  transition: all 0.2s ease-in; }
+  background: #FFF; }
   ul.dropdown-content li {
     text-decoration: none;
     display: block; }
@@ -386,6 +378,60 @@ ul.mobile-dropdown-content {
   display: block;
   -webkit-transition: all 0.2s ease-in;
   transition: all 0.2s ease-in; }
+
+.flipOutX {
+  -webkit-backface-visibility: visible !important;
+          backface-visibility: visible !important;
+  -webkit-animation-name: flipOutX;
+  animation-name: flipOutX;
+  -webkit-animation-duration: 1s;
+  animation-duration: 1s; }
+
+.flipInX {
+  -webkit-backface-visibility: visible !important;
+          backface-visibility: visible !important;
+  -webkit-animation-name: flipInX;
+  animation-name: flipInX;
+  -webkit-animation-duration: 1s;
+  animation-duration: 1s; }
+
+@-webkit-keyframes flipInX {
+  from {
+    -webkit-transform: perspective(400px) rotate3d(1, 0, 0, 90deg);
+            transform: perspective(400px) rotate3d(1, 0, 0, 90deg);
+    -webkit-animation-timing-function: ease-in;
+            animation-timing-function: ease-in;
+    opacity: 0; }
+  40% {
+    -webkit-transform: perspective(400px) rotate3d(1, 0, 0, -20deg);
+            transform: perspective(400px) rotate3d(1, 0, 0, -20deg);
+    -webkit-animation-timing-function: ease-in;
+            animation-timing-function: ease-in; }
+  60% {
+    -webkit-transform: perspective(400px) rotate3d(1, 0, 0, 10deg);
+            transform: perspective(400px) rotate3d(1, 0, 0, 10deg);
+    opacity: 1; }
+  80% {
+    -webkit-transform: perspective(400px) rotate3d(1, 0, 0, -5deg);
+            transform: perspective(400px) rotate3d(1, 0, 0, -5deg); }
+  to {
+    -webkit-transform: perspective(400px);
+            transform: perspective(400px); } }
+@-webkit-keyframes flipOutX {
+  from {
+    -webkit-transform: perspective(400px);
+            transform: perspective(400px); }
+  30% {
+    -webkit-transform: perspective(400px) rotate3d(1, 0, 0, -20deg);
+            transform: perspective(400px) rotate3d(1, 0, 0, -20deg);
+    opacity: 1; }
+  to {
+    -webkit-transform: perspective(400px) rotate3d(1, 0, 0, 90deg);
+            transform: perspective(400px) rotate3d(1, 0, 0, 90deg);
+    opacity: 0; } }
+.flipInX {
+  -webkit-backface-visibility: visible !important;
+          backface-visibility: visible !important; }
 
 /* About us */
 .about-us {
@@ -862,3 +908,129 @@ input.submit {
   font-size: 14px;
   line-height: 36px;
   color: #a4a4a4; }
+
+#loader-wrapper {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1000;
+  background: #FFF; }
+
+.loader {
+  font-size: 4em;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
+  -moz-transform: translate(-50%, -50%);
+  -o-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  height: .5em;
+  width: 1em;
+  z-index: 1001; }
+
+.loader:before,
+.loader:after {
+  content: "";
+  display: block;
+  border: 3px solid #fff568;
+  position: absolute;
+  height: .6em;
+  width: .6em; }
+
+.loader:before {
+  border-color: #6dcff6;
+  animation: load-before 2s ease-in-out infinite, zoom-before .66s ease-in-out infinite;
+  -webkit-animation: load-before 2s ease-in-out infinite, zoom-before .66s ease-in-out infinite;
+  animation: load-before 2s ease-in-out infinite, zoom-before .66s ease-in-out infinite; }
+
+.loader:after {
+  -webkit-animation: load-after 2s ease-in-out infinite, zoom-after .66s ease-in-out infinite;
+  animation: load-after 2s ease-in-out infinite, zoom-after .66s ease-in-out infinite; }
+
+@-webkit-keyframes load-before {
+  0% {
+    left: 0;
+    transform: scale(1.1);
+    -webkit-transform: scale(1.1);
+    -moz-transform: scale(1.1);
+    -o-transform: scale(1.1);
+    -ms-transform: scale(1.1); }
+  50% {
+    left: 150%;
+    transform: scale(1.5, 1);
+    -webkit-transform: scale(1.5, 1);
+    -moz-transform: scale(1.5, 1);
+    -o-transform: scale(1.5, 1);
+    -ms-transform: scale(1.5, 1); }
+  100% {
+    left: 0;
+    transform: scale(1.1);
+    -webkit-transform: scale(1.1);
+    -moz-transform: scale(1.1);
+    -o-transform: scale(1.1);
+    -ms-transform: scale(1.1); } }
+@-webkit-keyframes load-after {
+  0% {
+    left: 150%;
+    transform: scale(1.1);
+    -webkit-transform: scale(1.1);
+    -moz-transform: scale(1.1);
+    -o-transform: scale(1.1);
+    -ms-transform: scale(1.1); }
+  50% {
+    left: 0;
+    transform: scale(1.5, 1);
+    -webkit-transform: scale(1.5, 1);
+    -moz-transform: scale(1.5, 1);
+    -o-transform: scale(1.5, 1);
+    -ms-transform: scale(1.5, 1); }
+  100% {
+    left: 150%;
+    transform: scale(1.1);
+    -webkit-transform: scale(1.1);
+    -moz-transform: scale(1.1);
+    -o-transform: scale(1.1);
+    -ms-transform: scale(1.1); } }
+@-webkit-keyframes zoom-before {
+  0% {
+    z-index: 0; }
+  50% {
+    z-index: 1; }
+  100% {
+    z-index: 0; } }
+@-webkit-keyframes zoom-after {
+  0% {
+    z-index: 1; }
+  50% {
+    z-index: 0; }
+  100% {
+    z-index: 1; } }
+.loaded .loader:after, .loaded .loader:before {
+  left: 0;
+  opacity: 0;
+  transition: all 0.3s ease-out;
+  -webkit-transition: all 0.3s ease-out;
+  -moz-transition: all 0.3s ease-out;
+  -o-transition: all 0.3s ease-out;
+  -ms-transition: all 0.3s ease-out; }
+
+.loaded #loader-wrapper {
+  visibility: hidden;
+  transform: translateY(-100%);
+  -webkit-transform: translateY(-100%);
+  -moz-transform: translateY(-100%);
+  -o-transform: translateY(-100%);
+  -ms-transform: translateY(-100%);
+  transition: all 0.7s 0.5s ease-out;
+  -webkit-transition: all 0.7s 0.5s ease-out;
+  -moz-transition: all 0.7s 0.5s ease-out;
+  -o-transition: all 0.7s 0.5s ease-out;
+  -ms-transition: all 0.7s 0.5s ease-out; }
+
+/* JavaScript Turned Off */
+.no-js #loader-wrapper {
+  display: none; }
